# rex-engine

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  REDOT_AUTHORS.md  SConstruct  methods.cmake  options.cmake  rex_default_theme_icon_builders.py  sonar-project.properties  version.cmake  version.py
core/: CMakeLists.txt  core_bind.cpp  core_constants.cpp  doc_data.cpp  doc_data.h  register_core_types.cpp
core/config/: CMakeLists.txt  engine.cpp  engine.h  engine_architecture.cpp  engine_audio.cpp  engine_authorship.cpp  engine_debug.cpp  engine_fps.cpp  engine_gpu.cpp  engine_license.cpp  engine_misc.cpp  engine_paths.cpp  engine_physics.cpp  engine_runtime.cpp  engine_singletons.cpp  engine_timing.cpp  engine_version.cpp  project_settings.cpp  project_settings.h  project_settings_access.cpp  project_settings_config.cpp  project_settings_features.cpp  project_settings_paths.cpp  project_settings_property_info.cpp  project_settings_signals.cpp  project_settings_singleton.cpp
core/crypto/: CMakeLists.txt  SCsub  aes_context.cpp  aes_context.h  crypto.cpp  crypto_TLS.cpp  crypto_X509.cpp  crypto_core.cpp  crypto_core.h  hashing_context.cpp  hashing_context.h
core/debugger/: CMakeLists.txt  debugger_marshalls.cpp
core/error/: CMakeLists.txt
core/extension/: CMakeLists.txt  extension_api_dump.cpp  gdextension_manager.cpp
core/input/: CMakeLists.txt  input_event.cpp  shortcut.cpp
core/intrinsic/: alligned_mem.h  icpuid.h  intrin_arm.h  intrin_loader.h  intrin_x64.h  intrinsic.h
core/intrinsics/: icpuid.h
core/io/: CMakeLists.txt  http_client.cpp  image.cpp  json.cpp  missing_resource.cpp  packed_data_container.cpp  packet_peer.cpp  resource.cpp  resource_loader.cpp  udp_server.cpp
core/math/: CMakeLists.txt  a_star_grid_2d.cpp
core/object/: CMakeLists.txt  class_db.cpp  message_queue.cpp  method_bind.h  object.cpp  object.h  ref_counted.h  script_language.cpp  script_language.h  script_language_extension.cpp  script_language_extension.h  undo_redo.cpp
core/os/: CMakeLists.txt  spin_lock.h
core/string/: CMakeLists.txt  optimized_translation.cpp  translation.cpp  translation_server.cpp  ustring.cpp  ustring.h
core/templates/: CMakeLists.txt
core/variant/: CMakeLists.txt  native_ptr.h  type_info.h  typed_array.h  typed_dictionary.h
drivers/: CMakeLists.txt
drivers/accesskit/: CMakeLists.txt
drivers/alsa/: CMakeLists.txt
drivers/alsamidi/: CMakeLists.txt
drivers/apple/: CMakeLists.txt
drivers/backtrace/: CMakeLists.txt
drivers/coreaudio/: CMakeLists.txt
drivers/coremidi/: CMakeLists.txt  midi_driver_coremidi.cpp  midi_driver_coremidi.mm
drivers/d3d12/: CMakeLists.txt
drivers/egl/: CMakeLists.txt
drivers/gl_context/: CMakeLists.txt
drivers/gles3/: CMakeLists.txt
drivers/metal/: CMakeLists.txt
drivers/png/: CMakeLists.txt
drivers/pulseaudio/: CMakeLists.txt
drivers/unix/: CMakeLists.txt
drivers/vulkan/: CMakeLists.txt
drivers/wasapi/: CMakeLists.txt
drivers/windows/: CMakeLists.txt
drivers/winmidi/: CMakeLists.txt
drivers/xaudio2/: CMakeLists.txt
editor/: CMakeLists.txt  animation_track_editor.cpp  connections_dialog.cpp  create_dialog.cpp  dependency_editor.cpp  doc_tools.cpp  editor_file_system.cpp  editor_inspector.cpp  editor_node.cpp  editor_properties.cpp  editor_properties_array_dict.cpp  editor_resource_picker.cpp  editor_run_native.cpp  editor_settings.cpp  editor_settings_dialog.cpp  event_listener_line_edit.cpp  filesystem_dock.cpp  multi_node_edit.cpp  project_settings_editor.cpp  property_selector.cpp  register_editor_types.cpp  scene_tree_dock.cpp  script_create_dialog.cpp  script_create_dialog.h  shader_create_dialog.cpp  shader_globals_editor.cpp
editor/debugger/: CMakeLists.txt  editor_debugger_inspector.cpp  script_editor_debugger.cpp
editor/export/: CMakeLists.txt  editor_export_platform_pc.cpp
editor/gui/: CMakeLists.txt  editor_file_dialog.cpp  editor_object_selector.cpp  editor_quick_open_dialog.cpp  scene_tree_editor.cpp  touch_actions_panel.h
editor/import/: CMakeLists.txt  dynamic_font_import_settings.cpp  editor_import_plugin.cpp  resource_importer_bitmask.cpp  resource_importer_bmfont.cpp  resource_importer_csv_translation.cpp  resource_importer_dynamic_font.cpp  resource_importer_imagefont.cpp  resource_importer_layered_texture.cpp  resource_importer_svg.cpp  resource_importer_texture.cpp  resource_importer_texture_atlas.cpp  resource_importer_wav.cpp
editor/plugins/: CMakeLists.txt  animation_blend_tree_editor_plugin.cpp  asset_library_editor_plugin.cpp  editor_plugin.cpp  packed_scene_translation_parser_plugin.cpp  particle_process_material_editor_plugin.cpp  plugin_config_dialog.cpp  script_editor_plugin.cpp  script_text_editor.cpp  skeleton_3d_editor_plugin.cpp  tool_button_editor_plugin.cpp  visual_shader_editor_plugin.cpp
editor/project_manager/: CMakeLists.txt
editor/themes/: CMakeLists.txt  editor_theme_manager.cpp
main/: CMakeLists.txt  main.cpp
modules/: CMakeLists.txt
modules/astcenc/: CMakeLists.txt
modules/basis_universal/: CMakeLists.txt
modules/bcdec/: CMakeLists.txt
modules/betsy/: CMakeLists.txt
modules/bmp/: CMakeLists.txt
modules/camera/: CMakeLists.txt
modules/cryptography/: CMakeLists.txt  SCsub  module_AES.cpp  module_AES.h  module_Blowfish.cpp  module_Blowfish.h  module_RSA.cpp  module_RSA.h  register_types.cpp  register_types.h
modules/csg/: CMakeLists.txt  csg_shape.cpp
modules/cvtt/: CMakeLists.txt
modules/dds/: CMakeLists.txt
modules/enet/: CMakeLists.txt  enet_multiplayer_peer.cpp
modules/etcpak/: CMakeLists.txt
modules/fbx/: CMakeLists.txt
modules/freetype/: CMakeLists.txt
modules/gdscript/: CMakeLists.txt  gdscript.cpp  gdscript.h  gdscript_analyzer.cpp  gdscript_analyzer.h  gdscript_byte_codegen.cpp  gdscript_cache.h  (+18 more)
platform/: CMakeLists.txt
scene/: CMakeLists.txt  register_scene_types.cpp
servers/: CMakeLists.txt  audio_server.cpp  navigation_server_2d.cpp  navigation_server_3d.cpp  physics_server_2d.cpp  physics_server_3d.cpp  register_server_types.cpp  rendering_server.cpp
tests/: CMakeLists.txt
(+512 files in other folders)
